# NOKIA-PK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ccpp.yml
BTS/Tests/Application/: CMakeLists.txt
COMMON/Tests/: CMakeLists.txt
Doc/: notes.md
Doc/Lectures/11.UnitTesting/MasterMind/Application/: main.cpp
Doc/Lectures/11.UnitTesting/MasterMind/Tests/: GameTestSuite.cpp  MatcherTestSuite.cpp
UE/: .gitignore  CMakeLists.txt  main.cpp
UE/Application/: Application.cpp  Application.hpp  Context.hpp
UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  DbPort.cpp  DbPort.hpp  IBtsPort.hpp  IDbPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
UE/Application/States/: BaseState.cpp  BaseState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  TalkingState.cpp  TalkingState.hpp
UE/ApplicationEnvironment/: IUeGui.hpp
UE/ApplicationEnvironment/UeGui/: BaseMode.cpp  BaseMode.hpp  ICallMode.hpp  IDialMode.hpp  IListViewMode.hpp  ISmsComposeMode.hpp  ITextMode.hpp
UE/QtApplicationEnvironment/GUI/: QtUeGui.cpp  QtUeGui.hpp
UE/Tests/Application/: ApplicationTestSuite.cpp  CMakeLists.txt
UE/Tests/Application/Mocks/: IBtsPortMock.hpp  IDbPortMock.cpp  IDbPortMock.hpp  ITimerPortMock.hpp  IUeGuiMock.hpp  IUserPortMock.hpp
UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  TimerPortTestSuite.cpp  UserPortTestSuite.cpp
(+1 files in other folders)
